samples/_failures_safe/1761535577_620f9d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_74cfa824.c:158:28: error: expected declaration specifiers or ‘...’ at end of input
  158 | int read_identifier(struct LexerState *lexer,
      |                            ^~~~~~~~~~
